# hero-db-utils

./: .gitignore  MANIFEST.in  README.md  opt_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests-dev.yml  run_tests.yml
hero_db_utils/: constants.py  exceptions.py
hero_db_utils/clients/: __init__.py  _base.py  pgclient.py  postgres.py
hero_db_utils/datamodels/: __init__.py  exceptions.py  fields.py  helpers.py  loaders.py  mappers.py  models.py  preprocessing.py  sources.py  transformer.py
hero_db_utils/engines/: base.py  postgres.py
hero_db_utils/queries/postgres/: __init__.py  builder.py  op_builder.py
hero_db_utils/testing/: __init__.py  helpers.py  tests.py
hero_db_utils/utils/: dtypes.py  functional.py  queries.py  utils.py
hero_db_utils/utils/postgres/: adapters.py  queries.py
notebooks/: datamodels.ipynb  pg_client.ipynb
tests/: test_postgres_client.py
tests/fixtures/: end_prc.csv
