[project]
name = "hero_db_utils"
authors = [
    "Jose Sanchez Viloria <jose.sanchez@aio.ai>"
]
maintainers = [
    "Jose Sanchez Viloria <jose.sanchez@aio.ai>"
]
python = "^3.7"
description = "Database utilities for projects related to the AIO-hero platform.."
repository = "https://github.com/AIO2020/hero-db-utils"

classifiers = [
    "Topic :: Software Development",
]

[dependencies]
pandas = "1.2.4"
psycopg2 = "2.8.5"

[build-system]
requires = [
    "setuptools >= 47.1.1",
    "wheel",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"
